# drefs

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-04-15-native-syntax-design.md
editors/jetbrains/src/main/kotlin/com/drefs/intellij/: DrefsPatterns.kt
editors/pycharm/: build.gradle.kts  settings.gradle.kts
editors/pycharm/src/main/kotlin/com/doxr/intellij/: DoxrAnnotator.kt  DoxrLspServerDescriptor.kt  DoxrLspServerSupportProvider.kt  DoxrPythonReference.kt  DoxrReferenceProvider.kt
editors/pycharm/src/main/kotlin/com/drefs/intellij/: DrefsAnnotator.kt  DrefsPythonReference.kt  DrefsReferenceContributor.kt  DrefsReferenceProvider.kt
scripts/: check_pattern_sync.sh  generate_benchmark_svg.py
src/: config.rs  diagnostic.rs  discover.rs  extract.rs  fast_scan.rs  graph.rs  inventory.rs  lsp.rs  main.rs  parse.rs  patterns.rs  util.rs
test_fixture/: pyproject.toml
test_fixture/src/my_pkg/: __init__.py  models.py
test_fixture/src/my_pkg/utils/: helpers.py
tests/: integration.rs
tests/fixtures/decorated_classes/: pyproject.toml
tests/fixtures/decorated_classes/src/pkg/: __init__.py
tests/fixtures/decorated_classes/src/pkg/sub/: __init__.py  base.py  child.py  config.py
tests/fixtures/edge_cases/src/pkg/: __init__.py  models.py  sphinx_style.py
tests/fixtures/edge_cases/src/pkg/mixins/: __init__.py  serializable.py
tests/fixtures/edge_cases/src/pkg/reexport/: __init__.py  layer_b.py  layer_c.py
tests/fixtures/edge_cases/src/pkg/sub/: __init__.py  deep.py  helpers.py
tests/fixtures/multiline_imports/src/pkg/: __init__.py  helpers.py  models.py  views.py
tests/fixtures/native_syntax/: pyproject.toml
tests/fixtures/native_syntax/src/pkg/: __init__.py  models.py  services.py
tests/fixtures/wildcard_imports/src/pkg/: __init__.py  helpers.py  models.py  views.py
